Bug 842326 - Trace stubs when unlinking them for incremental GC. r=bhackett