js/src/ion/BaselineJIT.cpp
@@ -548,7 +548,7 @@ BaselineScript::toggleDebugTraps(UnrootedScript script, jsbytecode *pc)
 }
 
 void
-BaselineScript::purgeOptimizedStubs()
+BaselineScript::purgeOptimizedStubs(Zone *zone)
 {
     IonSpew(IonSpew_BaselineIC, "Purging optimized stubs");
 
@@ -568,7 +568,7 @@ BaselineScript::purgeOptimizedStubs()
 
             while (stub->next()) {
                 if (!stub->allocatedInFallbackSpace()) {
-                    lastStub->toFallbackStub()->unlinkStub(prev, stub);
+                    lastStub->toFallbackStub()->unlinkStub(zone, prev, stub);
                     stub = stub->next();
                     continue;
                 }
@@ -582,10 +582,10 @@ BaselineScript::purgeOptimizedStubs()
                 // optimized stub space.
                 ICTypeMonitor_Fallback *lastMonStub =
                     lastStub->toMonitoredFallbackStub()->fallbackMonitorStub();
-                lastMonStub->resetMonitorStubChain();
+                lastMonStub->resetMonitorStubChain(zone);
             }
         } else if (lastStub->isTypeMonitor_Fallback()) {
-            lastStub->toTypeMonitor_Fallback()->resetMonitorStubChain();
+            lastStub->toTypeMonitor_Fallback()->resetMonitorStubChain(zone);
         } else {
             JS_ASSERT(lastStub->isTableSwitch());
         }
@@ -618,7 +618,7 @@ ion::FinishDiscardBaselineScript(FreeOp *fop, UnrootedScript script)
     if (script->baseline->active()) {
         // Script is live on the stack. Keep the BaselineScript, but destroy
         // stubs allocated in the optimized stub space.
-        script->baseline->purgeOptimizedStubs();
+        script->baseline->purgeOptimizedStubs(script->zone());
 
         // Reset |active| flag so that we don't need a separate script
         // iteration to unmark them.
